--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_build=3
 loader_version=0.7.2+build.175
 
 # Mod Properties
-mod_version = 2.2.2
+mod_version = 2.2.3-ironbarrels2
 maven_group = io.github.cottonmc
 archives_base_name = libcd
 
